# nyan-bow

./: .gitignore  .gitmodules  WS2812B.stanza  design-generator.stanza  stanza.proj
CAD/kicad/: CAD.kicad_pcb  CAD.sch  _autosave-CAD.kicad_pcb  project_symbols.lib
CAD/kicad/CAD.pretty/: SOT95P280X145_5N.kicad_mod  WSP282B_landpattern.kicad_mod  lp_TYPE_C_31_M_12.kicad_mod  qfn_landpattern.kicad_mod  switch_lp.kicad_mod  text_lp.kicad_mod
NAYN/: nyan.kicad_pcb  nyan.pro  sym-lib-table
NAYN/.svg2shenzhen-cache/nyancat.pretty/: F.Mask_g16489.kicad_mod  F.Silk_g16491.kicad_mod
NAYN/kicad/: NAYN.kicad_pcb  fp-lib-table
NAYN/kicad/NAYN.pretty/: IC38_ESP32_WROOM_328MB_EXP.kicad_mod  ipc_two_pin_landpattern_2.kicad_mod  ipc_two_pin_landpattern_3.kicad_mod  (+4 more)
NAYN/nyan.pretty/: KawaiiTechLogo.kicad_mod  pinIndicatorHeart.kicad_mod  pinPin.kicad_mod
NAYN/nyan_gerbers/: nyan-B_Mask.gbr  nyan-Edge_Cuts.gbr  nyan-F_Mask.gbr  nyan-F_SilkS.gbr  nyan-NPTH.drl
firmware/: CMakeLists.txt  animations.cpp  animations.hpp  effects.cpp  effects.hpp  knobs.cpp  knobs.hpp  ledstrip.cpp  ledstrip.hpp  oscillator.cpp  oscillator.hpp  synth.cpp  ws2816.pio
jitx-2048-imported/: board.stanza  jitx-2048.stanza  stanza.proj
jitx-2048-imported/landpatterns/: IC38_ESP32-WROOM-328MB_EXP.stanza  JLCtoolinghole.stanza  SOT95P280X100_3N.stanza  SOT95P280X145_5N.stanza  ipc_two_pin_landpattern.stanza  ipc_two_pin_landpattern_1.stanza  ipc_two_pin_landpattern_2.stanza  ipc_two_pin_landpattern_3.stanza  ipc_two_pin_landpattern_6.stanza  ipc_two_pin_landpattern_7.stanza  jitx_sm_lp.stanza  keystone_500x_pkg.stanza  lp_TYPE_C_31_M_12.stanza  lp_USBLC6_2SC6.stanza  qfn_landpattern.stanza  switch_lp.stanza
jitx-2048-imported/symbols/: AP2112.stanza  ESP32-WROOM-328MB.stanza  JITX.stanza  JLCtoolinghole.stanza  Sym500xx.stanza  USBLC6_2SC6.stanza  USB_C.stanza  component.stanza  component_2.stanza  component_3.stanza  my_capacitor.stanza  my_capacitor_3.stanza  my_capacitor_5.stanza  my_capacitor_6.stanza  my_capacitor_7.stanza  my_capacitor_8.stanza  my_resistor.stanza  my_resistor_3.stanza  my_resistor_4.stanza  my_resistor_6.stanza  my_resistor_7.stanza  red.stanza
jitx-2048/altium/: jitx-2048.xml
kicad-imports/NAYN/: NAYN.stanza  board.stanza  log.txt  stanza.proj
open-components-database/tests/: test-checks.stanza
source/NAYN/: fp-lib-table  nyan-cache.lib  nyan-rescue.lib  nyan.sch
(+127 files in other folders)
